WebCore:

Reviewed by Dave Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=17465
          REGRESSION: <DIV> tokenized into Div if still searching for DOCTYPE

        Test: fast/tokenizer/doctype-search-reset.html

        * html/HTMLTokenizer.cpp:
        (WebCore::HTMLTokenizer::parseTag):

LayoutTests:

        Reviewed by Dave Hyatt.

        - test for http://bugs.webkit.org/show_bug.cgi?id=17465
          REGRESSION: <DIV> tokenized into Div if still searching for DOCTYPE

        * fast/tokenizer/doctype-search-reset-expected.txt: Added.
        * fast/tokenizer/doctype-search-reset.html: Added.



Canonical link: https://commits.webkit.org/24182@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30455 268f45cc-cd09-0410-ab3c-d52691b4dbfc